fix: align exhibition cards symmetrically

--- a/Front/src/css/ExhibitionList.css
+++ b/Front/src/css/ExhibitionList.css
@@ -1,3 +1,9 @@
+.exhibition-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px; 
+}
 .list-image-wrapper {
   flex-shrink: 0;
   width: 150px;
@@ -30,6 +36,7 @@
   font-size: 1rem;
   font-weight: bold;
   margin: 0;
+  text-align: center;
 }
 
 .list-location,
@@ -43,6 +50,7 @@
   font-size: 0.8rem;
   margin-top: 4px;
   color: #777;
+  text-align: center;
 }
 
 .more-link {
